# muPlant_WarehouseManagement

./: .gitignore  main.py  make.bat  muPlant_Warehousemanager.pyproject  muPlant_Warehousemanager.pyproject.user.9d2882c  muPlant_Warehousemanager.pyproject.user.acc6d0b  muplant_WarehouseManagement.pyproject  muplant_WarehouseManagement.pyproject.user.4150e56  muplant_WarehouseManagement.pyproject.user.9d2882c  muplant_WarehouseManagement.pyproject.user.acc6d0b
FEIG_RFIDReaderInterface/: BasicTcpConnect.cpp  BasicTcpConnect.h  BasicTcpConnectWrapper.cpp  CMakeLists.txt  FEIG_RFIDReaderInterface.sln  FEIG_RFIDReaderInterface.vcxproj  FEIG_RFIDReaderInterface.vcxproj.filters  UpgradeLog.htm  dllmain.cpp  wrapper.cpp
FEIG_RFIDReaderInterface/FEIG.ID.SDK.Gen3.Windows.Cpp-v6.6.0/: BasicTcpConnectWrapper.cpp
FEIG_RFIDReaderInterface/FEIG.ID.SDK.Gen3.Windows.Cpp-v6.6.0/doc/: Readme.txt
FEIG_RFIDReaderInterface/x64/Debug/: FEIG_RFIDReaderInterface.dll.recipe  FEIG_RFIDReaderInterface.ilk  FEIG_RFIDReaderInterface.vcxproj.FileListAbsolute.txt  vc143.idb
FEIG_RFIDReaderInterface/x64/Debug/FEIG_RFI.d19ebb21.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FEIG_RFIDReaderInterface.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FEIG_RFIDReaderInterface/x64/Release/: FEIG_RFIDReaderInterface.dll.recipe  FEIG_RFIDReaderInterface.iobj  FEIG_RFIDReaderInterface.ipdb  FEIG_RFIDReaderInterface.vcxproj.FileListAbsolute.txt
FEIG_RFIDReaderInterface/x64/Release/FEIG_RFI.cdc113ce.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FEIG_RFIDReaderInterface.lastbuildstate
FEIG_RFIDReaderInterface/x64/Release/FEIG_RFI.d19ebb21.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FEIG_RFIDReaderInterface.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Jupyter/: markerOnA4.ai  (+8 more)
(+465 files in other folders)
